--- a/index.html
+++ b/index.html
@@ -16,85 +16,89 @@
       <div class = "movies_heading">Movies</div>
       <div class = "filters">
         <div class = "Bubble_heading">Cluster Bubbles</div>
-        <div class = "filter_box">  
-          <div class = "filter_heading"><p>Filter</p></div>
-          <div class = "filter_dropdown">
-            <nav id="menu">
-              <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
-              <input type="checkbox" id="tm">
-              <ul class="main-menu clearfix">
-                <li><a>Select
-                    <span class="drop-icon">▾</span>
-                    <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
-                  </a>
-                  <input type="checkbox" id="sm1">
-                  <ul class="sub-menu">
-                    <li><a>Genre
-                        <span class="drop-icon">▾</span>
-                        <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+        <div class = "filter_box">
+          <div class = "filter_box_box">  
+            <div class = "filter_heading"><p>Filter</p></div>
+            <div class = "filter_dropdown">
+              <nav id="menu">
+                <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
+                <input type="checkbox" id="tm">
+                <ul class="main-menu clearfix">
+                  <li><a>Select
+                      <span class="drop-icon">▾</span>
+                      <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
+                    </a>
+                    <input type="checkbox" id="sm1">
+                    <ul class="sub-menu">
+                      <li><a>Genre
+                          <span class="drop-icon">▾</span>
+                          <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                          </a>
+                        <input type="checkbox" id="sm2">
+                        <ul class="sub-menu filter_sub_menu" id ="genre_list">
+                          <li><a onclick="filterBy('Genre','Action')">Action</a></li>
+                          <li><a onclick="filterBy('Genre','Adventure')">Adventure</a></li>
+                          <li><a onclick="filterBy('Genre','Animation')">Animation</a></li>
+                          <li><a onclick="filterBy('Genre','Comedy')">Comedy</a></li>
+                          <li><a onclick="filterBy('Genre','Crime')">Crime</a></li>
+                          <li><a onclick="filterBy('Genre','Documentary')">Documentary</a></li>
+                          <li><a onclick="filterBy('Genre','Drama')">Drama</a></li>
+                          <li><a onclick="filterBy('Genre','Family')">Family</a></li>
+                          <li><a onclick="filterBy('Genre','Fantasy')">Fantasy</a></li>
+                          <li><a onclick="filterBy('Genre','History')">History</a></li>
+                          <li><a onclick="filterBy('Genre','Horror')">Horror</a></li>
+                          <li><a onclick="filterBy('Genre','Music')">Music</a></li>
+                          <li><a onclick="filterBy('Genre','Mystery')">Mystery</a></li>
+                          <li><a onclick="filterBy('Genre','Romance')">Romance</a></li>
+                          <li><a onclick="filterBy('Genre','Science Fiction')">Science Fiction</a></li>
+                          <li><a onclick="filterBy('Genre','Thriller')">Thriller</a></li>
+                          <li><a onclick="filterBy('Genre','War')">War</a></li>
+                          <li><a onclick="filterBy('Genre','Western')">Western</a></li>
+                        </ul>
+                      </li>
+                      <li><a>Actor
+                          <span class="drop-icon">▾</span>
+                          <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
                         </a>
-                      <input type="checkbox" id="sm2">
-                      <ul class="sub-menu" id ="genre_list">
-                        <li><a onclick="filterBy('Genre','Action')">Action</a></li>
-                        <li><a onclick="filterBy('Genre','Adventure')">Adventure</a></li>
-                        <li><a onclick="filterBy('Genre','Animation')">Animation</a></li>
-                        <li><a onclick="filterBy('Genre','Comedy')">Comedy</a></li>
-                        <li><a onclick="filterBy('Genre','Crime')">Crime</a></li>
-                        <li><a onclick="filterBy('Genre','Documentary')">Documentary</a></li>
-                        <li><a onclick="filterBy('Genre','Drama')">Drama</a></li>
-                        <li><a onclick="filterBy('Genre','Family')">Family</a></li>
-                        <li><a onclick="filterBy('Genre','Fantasy')">Fantasy</a></li>
-                        <li><a onclick="filterBy('Genre','History')">History</a></li>
-                        <li><a onclick="filterBy('Genre','Horror')">Horror</a></li>
-                        <li><a onclick="filterBy('Genre','Music')">Music</a></li>
-                        <li><a onclick="filterBy('Genre','Mystery')">Mystery</a></li>
-                        <li><a onclick="filterBy('Genre','Romance')">Romance</a></li>
-                        <li><a onclick="filterBy('Genre','Science Fiction')">Science Fiction</a></li>
-                        <li><a onclick="filterBy('Genre','Thriller')">Thriller</a></li>
-                        <li><a onclick="filterBy('Genre','War')">War</a></li>
-                        <li><a onclick="filterBy('Genre','Western')">Western</a></li>
-                      </ul>
-                    </li>
-                    <li><a>Actor
-                        <span class="drop-icon">▾</span>
-                        <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
-                      </a>
-                      <input type="checkbox" id="sm3">
-                      <ul class="sub-menu" id = "actor_list">
-                        <li><input class="list_search" id="actor_input" type="text" placeholder="Search.."></li>
-                      </ul>
-                    </li>
-                    <li><a>Director
-                        <span class="drop-icon">▾</span>
-                        <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
-                        </a>
-                      <input type="checkbox" id="sm4">
-                      <ul class="sub-menu" id = "director_list">
-                        <li><input class="list_search" id="director_input" type="text" placeholder="Search.."></li>
-                      </ul>
-                    </li>
-                    <li><a>Production Company
-                        <span class="drop-icon">▾</span>
-                        <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
-                        </a>
-                      <input type="checkbox" id="sm5">
-                      <ul class="sub-menu" id = "production_company_list">
-                        <li><input class="list_search" id="production_company_input" type="text" placeholder="Search.."></li>
-                      </ul>
-                    </li>
-                    <li><a>Keyword
-                        <span class="drop-icon">▾</span>
-                        <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
-                        </a>
-                      <input type="checkbox" id="sm5">
-                      <ul class="sub-menu" id = "keyword_list">
-                        <li><input class="list_search" id="keyword_input" type="text" placeholder="Search.."></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </nav>
+                        <input type="checkbox" id="sm3">
+                        <ul class="sub-menu filter_sub_menu_2" id = "actor_list">
+                          <li><input class="list_search" id="actor_input" type="text" placeholder="Search.."></li>
+                        </ul>
+                      </li>
+                      <li><a>Director
+                          <span class="drop-icon">▾</span>
+                          <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                          </a>
+                        <input type="checkbox" id="sm4">
+                        <ul class="sub-menu filter_sub_menu_3" id = "director_list">
+                          <li><input class="list_search" id="director_input" type="text" placeholder="Search.."></li>
+                        </ul>
+                      </li>
+                      <li><a>Production Company
+                          <span class="drop-icon">▾</span>
+                          <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                          </a>
+                        <input type="checkbox" id="sm5">
+                        <ul class="sub-menu filter_sub_menu_4" id = "production_company_list">
+                          <li><input class="list_search" id="production_company_input" type="text" placeholder="Search.."></li>
+                        </ul>
+                      </li>
+                      <li><a>Keyword
+                          <span class="drop-icon">▾</span>
+                          <label title="Toggle Drop-down" class="drop-icon" for="sm2">▾</label>
+                          </a>
+                        <input type="checkbox" id="sm5">
+                        <ul class="sub-menu filter_sub_menu_5" id = "keyword_list">
+                          <li><input class="list_search" id="keyword_input" type="text" placeholder="Search.."></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+          <div id = "filter_tag_holder">
           </div>
         </div>
         <div class = "Color_heading">
@@ -213,6 +217,7 @@
     <script src="./production_companies.js"></script>
     <script type="text/javascript">
       var genres = [];
+      var applied_filters = [];
       var all_genres = ["Action", "Adventure", "Animation", "Comedy", "Crime", "Documentary", "Drama", "Family", "Fantasy", "History", "Horror", "Music", "Mystery", "Romance", "Science Fiction", "Thriller", "War", "Western"];
       $(".Y_axis_sub_menu > li").click(function() {
         $("#Y_axis_sub_menu_heading").text($(this).text()+" "); 
@@ -223,49 +228,170 @@
         genres.splice(genres.indexOf($(this).prev().text()), 1);
         $(this).parent('div').remove(); 
       });
+
+      $(document).on('click', '.close_filter_tag', function() { 
+        applied_filters.splice(applied_filters.indexOf($(this).prev().text()), 1);
+        $(this).parent('div').remove(); 
+      });
+
+      $(".filter_sub_menu > li").click(function() {
+        var str2 = $(this).text();
+        if (!applied_filters.includes(str2)) {
+          var d = document.createElement("div");
+          d.className = "filter_tag";
+          var a1 = document.createElement("a");
+          a1.appendChild(document.createTextNode(str2));
+          var a2 = document.createElement("a");
+          a2.appendChild(document.createTextNode("x"));
+          a2.className = "close_filter_tag";
+          var str3 = "removeFilter(\'Genre\',\'";
+          var str4 = "\')";
+          var str5 = str3.concat(str2, str4);
+          a2.setAttribute("onclick", str5);
+          d.appendChild(a1);
+          d.appendChild(document.createTextNode("\u00A0"));
+          d.appendChild(a2);
+          filter_tag_holder.appendChild(d);
+          applied_filters.push(str2);
+        }
+      });
       
-      $(".genre_sub_menu > li").click(function() {
+      $(document).on('click', '.Actor10', function() { 
+        var str2 = $(this).text();
+        if (!applied_filters.includes(str2)) {
+          var d = document.createElement("div");
+          d.className = "filter_tag";
+          var a1 = document.createElement("a");
+          a1.appendChild(document.createTextNode(str2));
+          var a2 = document.createElement("a");
+          a2.appendChild(document.createTextNode("x"));
+          a2.className = "close_filter_tag";
+          var str3 = "removeFilter(\'Actor\',\'";
+          var str4 = "\')";
+          var str5 = str3.concat(str2, str4);
+          a2.setAttribute("onclick", str5);
+          d.appendChild(a1);
+          d.appendChild(document.createTextNode("\u00A0"));
+          d.appendChild(a2);
+          filter_tag_holder.appendChild(d);
+          applied_filters.push(str2);
+        }
+      });
+
+      $(document).ready(function(){
+        $(".Director10").click(function() {
           var str2 = $(this).text();
-          if (str2 == "All") {
-            for (i = 0; i < all_genres.length; i++) {
-              if (!genres.includes(all_genres[i])) {
-                var d = document.createElement("div");
-                d.className = all_genres[i];
-                var a1 = document.createElement("a");
-                a1.appendChild(document.createTextNode(all_genres[i]));
-                var a2 = document.createElement("a");
-                a2.appendChild(document.createTextNode("x"));
-                a2.className = "close_tag";
-                var str3 = "onGenreDelected(\'";
-                var str4 = "\')";
-                var str5 = str3.concat(all_genres[i], str4);
-                a2.setAttribute("onclick", str5);
-                d.appendChild(a1);
-                d.appendChild(document.createTextNode("\u00A0"));
-                d.appendChild(a2);
-                tag_holder.appendChild(d);
-                genres.push(all_genres[i]);
-              }
-            }
-          }
-          else if (!genres.includes(str2)) {
+          if (!applied_filters.includes(str2)) {
             var d = document.createElement("div");
-            d.className = str2;
+            d.className = "filter_tag";
             var a1 = document.createElement("a");
             a1.appendChild(document.createTextNode(str2));
             var a2 = document.createElement("a");
             a2.appendChild(document.createTextNode("x"));
-            a2.className = "close_tag";
-            var str3 = "onGenreDelected(\'";
+            a2.className = "close_filter_tag";
+            var str3 = "removeFilter(\'Director\',\'";
             var str4 = "\')";
             var str5 = str3.concat(str2, str4);
             a2.setAttribute("onclick", str5);
             d.appendChild(a1);
             d.appendChild(document.createTextNode("\u00A0"));
             d.appendChild(a2);
-            tag_holder.appendChild(d);
-            genres.push(str2);
+            filter_tag_holder.appendChild(d);
+            applied_filters.push(str2);
           }
+        });
+      });
+
+      $(document).ready(function(){
+        $(".Production10").click(function() {
+          var str2 = $(this).text();
+          if (!applied_filters.includes(str2)) {
+            var d = document.createElement("div");
+            d.className = "filter_tag";
+            var a1 = document.createElement("a");
+            a1.appendChild(document.createTextNode(str2));
+            var a2 = document.createElement("a");
+            a2.appendChild(document.createTextNode("x"));
+            a2.className = "close_filter_tag";
+            var str3 = "removeFilter(\'Production Company\',\'";
+            var str4 = "\')";
+            var str5 = str3.concat(str2, str4);
+            a2.setAttribute("onclick", str5);
+            d.appendChild(a1);
+            d.appendChild(document.createTextNode("\u00A0"));
+            d.appendChild(a2);
+            filter_tag_holder.appendChild(d);
+            applied_filters.push(str2);
+          }
+        });
+      });
+
+      $(document).ready(function(){
+        $(".Keyword10").click(function() {
+          var str2 = $(this).text();
+          if (!applied_filters.includes(str2)) {
+            var d = document.createElement("div");
+            d.className = "filter_tag";
+            var a1 = document.createElement("a");
+            a1.appendChild(document.createTextNode(str2));
+            var a2 = document.createElement("a");
+            a2.appendChild(document.createTextNode("x"));
+            a2.className = "close_filter_tag";
+            var str3 = "removeFilter(\'Keyword\',\'";
+            var str4 = "\')";
+            var str5 = str3.concat(str2, str4);
+            a2.setAttribute("onclick", str5);
+            d.appendChild(a1);
+            d.appendChild(document.createTextNode("\u00A0"));
+            d.appendChild(a2);
+            filter_tag_holder.appendChild(d);
+            applied_filters.push(str2);
+          }
+        });
+      });
+
+      $(".genre_sub_menu > li").click(function() {
+        var str2 = $(this).text();
+        if (str2 == "All") {
+          for (i = 0; i < all_genres.length; i++) {
+            if (!genres.includes(all_genres[i])) {
+              var d = document.createElement("div");
+              d.className = all_genres[i];
+              var a1 = document.createElement("a");
+              a1.appendChild(document.createTextNode(all_genres[i]));
+              var a2 = document.createElement("a");
+              a2.appendChild(document.createTextNode("x"));
+              a2.className = "close_tag";
+              var str3 = "onGenreDelected(\'";
+              var str4 = "\')";
+              var str5 = str3.concat(all_genres[i], str4);
+              a2.setAttribute("onclick", str5);
+              d.appendChild(a1);
+              d.appendChild(document.createTextNode("\u00A0"));
+              d.appendChild(a2);
+              tag_holder.appendChild(d);
+              genres.push(all_genres[i]);
+            }
+          }
+        }
+        else if (!genres.includes(str2)) {
+          var d = document.createElement("div");
+          d.className = str2;
+          var a1 = document.createElement("a");
+          a1.appendChild(document.createTextNode(str2));
+          var a2 = document.createElement("a");
+          a2.appendChild(document.createTextNode("x"));
+          a2.className = "close_tag";
+          var str3 = "onGenreDelected(\'";
+          var str4 = "\')";
+          var str5 = str3.concat(str2, str4);
+          a2.setAttribute("onclick", str5);
+          d.appendChild(a1);
+          d.appendChild(document.createTextNode("\u00A0"));
+          d.appendChild(a2);
+          tag_holder.appendChild(d);
+          genres.push(str2);
+        }
       });
       
       $(".Color_sub_menu > li").click(function() {
