--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
               var a2 = document.createElement("a");
               a2.appendChild(document.createTextNode("x"));
               a2.className = "close_tag";
-              var str3 = "onGenreDelected(\'";
+              var str3 = "onGenreDeleted(\'";
               var str4 = "\')";
               var str5 = str3.concat(all_genres[i], str4);
               a2.setAttribute("onclick", str5);
@@ -389,7 +389,7 @@
           var a2 = document.createElement("a");
           a2.appendChild(document.createTextNode("x"));
           a2.className = "close_tag";
-          var str3 = "onGenreDelected(\'";
+          var str3 = "onGenreDeleted(\'";
           var str4 = "\')";
           var str5 = str3.concat(str2, str4);
           a2.setAttribute("onclick", str5);
