--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Varela' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Yeseva One' rel='stylesheet'>
@@ -18,6 +19,10 @@
       <div class = "welcome_div">
         <p class = "explore">EXPLORE</p>
         <p class = "movies_welcome">Movies</p>
+        <div class = "viz_help">
+        </div>
+        <div id="movie_info" class="overlay_info">
+        </div>
       </div>
       <div class = "graph_viz">
         <svg id = "svg2" width="500" height="500"></svg>
