Movie info checkpoint

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class = "movies_welcome">Movies</p>
         <div class = "viz_help">
         </div>
-        <div id="movie_info" class="overlay_info">
+        <div id="overlay_info">
         </div>
       </div>
       <div class = "graph_viz">
