movie info complete

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         </div>
         <div id="overlay_info">
         <p class = "close_overlay">x</p>
-
+        <p class = "info_title"></p>
+        <p class = "info_tagline"></p>
+        <p class = "info_bar"></p>
+        <p class = "info_overview"></p>
         </div>
       </div>
       <div class = "graph_viz">
@@ -181,7 +184,7 @@
               <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
               <input type="checkbox" id="tm">
               <ul class="main-menu clearfix">
-                <li><a>Select Genre 
+                <li><a>Select 
                     <span class="drop-icon">▾</span>
                     <label title="Toggle Drop-down" class="drop-icon" for="sm1">▾</label>
                   </a>
@@ -251,6 +254,7 @@
     <script src="./actors.js"></script>
     <script src="./bubble.js"></script>
     <script src="./directors.js"></script>
+    <script src="./runtime_dictionary.js"></script>
     <script src="./vote_dic.js"></script>
     <script src="./production_companies.js"></script>
     <script type="text/javascript">
