--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class = "graph_viz">
-        <svg id = "svg2" width="500" height="500"></svg>
+        <svg id = "svg2"></svg>
       </div>
       <div class = "timeline_viz" id = "timeline_viz">
         <svg class = "svg1">
