--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class = "Bubble_heading">Cluster Bubbles</div>
         <div class = "Genre_bubble">
           <div class = "Genres_heading">
-            <p>Genre</p>
+            <p>Genres</p>
             <div class = "Genre_dropdown">
               <nav id="menu">
                 <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
@@ -55,24 +55,24 @@
                     <input type="checkbox" id="sm1">
                     <ul class="sub-menu genre_sub_menu_filter genre_scrollable_menu">
                       <li><a>All</a></li>
-                      <li><a onclick = "filterBy('Action')">Action</a></li>
-                      <li><a onclick = "filterBy('Adventure')">Adventure</a></li>
-                      <li><a onclick = "filterBy('Animation')">Animation</a></li>
-                      <li><a onclick = "filterBy('Comedy')">Comedy</a></li>
-                      <li><a onclick = "filterBy('Crime')">Crime</a></li>
-                      <li><a onclick = "filterBy('Documentary')">Documentary</a></li>
-                      <li><a onclick = "filterBy('Drama')">Drama</a></li>
-                      <li><a onclick = "filterBy('Family')">Family</a></li>
-                      <li><a onclick = "filterBy('Fantasy')">Fantasy</a></li>
-                      <li><a onclick = "filterBy('History')">History</a></li>
-                      <li><a onclick = "filterBy('Horror')">Horror</a></li>
-                      <li><a onclick = "filterBy('Music')">Music</a></li>
-                      <li><a onclick = "filterBy('Mystery')">Mystery</a></li>
-                      <li><a onclick = "filterBy('Romance')">Romance</a></li>
-                      <li><a onclick = "filterBy('Science Fiction')">Science Fiction</a></li>
-                      <li><a onclick = "filterBy('Thriller')">Thriller</a></li>
-                      <li><a onclick = "filterBy('War')">War</a></li>
-                      <li><a onclick = "filterBy('Western')">Western</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Action')">Action</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Adventure')">Adventure</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Animation')">Animation</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Comedy')">Comedy</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Crime')">Crime</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Documentary')">Documentary</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Drama')">Drama</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Family')">Family</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Fantasy')">Fantasy</a></li>
+                      <li><a onclick = "filterBy('Genre', 'History')">History</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Horror')">Horror</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Music')">Music</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Mystery')">Mystery</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Romance')">Romance</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Science Fiction')">Science Fiction</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Thriller')">Thriller</a></li>
+                      <li><a onclick = "filterBy('Genre', 'War')">War</a></li>
+                      <li><a onclick = "filterBy('Genre', 'Western')">Western</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -219,7 +219,7 @@
           </div>
         </div>
         <div class = "Genres">
-          <p>Genre</p>
+          <p>Genres</p>
           <div class = "Genre_dropdown">
             <nav id="menu">
               <label for="tm" id="toggle-menu">Navigation <span class="drop-icon">▾</span></label>
